message-page added

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,5 +25,12 @@ body {
     font-size: x-large;
     font-style: italic;
     font-family: "Fontdiner Swanky", cursive;
-    color: #2b3b31 !important;
+}
+
+.color-dark {
+    color: #33473b !important;
+}
+
+.color-contrast {
+    color: #abc4b6 !important;
 }
